# lz4xx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lz4xx.cpp  lz4xx.h.in  test.cpp
cmake/: Lz4++Config.cmake.in  Lz4++Targets.cmake
